# python-project-template

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  404.html  README.md  TEMPLATE_USAGE.md  index.html  mkdocs.yml  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  pr-check.yml  release.yml
docs/: contributing.md  index.md
docs/api/: modules.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: ci-optimization.md  cli.md  examples.md  pre-commit.md
scripts/: init_template.py
search/: search_index.json
src/: __init__.py
src/your_package_name/: __init__.py  cli.py
tests/: test_example.py
